[gd_scene load_steps=4 format=2]

[ext_resource path="res://Ghostpixxells_pixelfood/81_pizza.png" type="Texture" id=1]
[ext_resource path="res://Objects/Objeto.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 9.75 )

[node name="Pizza" type="Area2D"]
script = ExtResource( 2 )

[node name="81Pizza" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_Pizza_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Pizza_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Pizza_mouse_exited"]
